--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Masterpage.Master
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Masterpage.Master
@@ -4,93 +4,41 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <title>ICT4Events</title>
+    <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css" rel="stylesheet" type="text/css"/>
-	<script type="text/javascript" src="jquery-1.11.2.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="CSS/style.css" media="screen"/>
 </head>
 <body>
-    <div id="space" class="scrollto">
-	    <h1 align="center">ICT4Events</h1>
-    </div>      
-<section id="header" class = "header">
-	<script>
-		$(function () {
-		$('#nav').stickyNavbar({
-		activeClass: "active",          // Class to be added to highlight nav elements
-		sectionSelector: "scrollto",    // Class of the section that is interconnected with nav links
-		animDuration: 250,              // Duration of jQuery animation
-		startAt: 0,                     // Stick the menu at XXXpx from the top of the this() (nav container)
-		easing: "linear",               // Easing type if jqueryEffects = true, use jQuery Easing plugin to extend easing types - gsgd.co.uk/sandbox/jquery/easing
-		animateCSS: true,               // AnimateCSS effect on/off
-		animateCSSRepeat: false,        // Repeat animation everytime user scrolls
-		cssAnimation: "fadeInDown",     // AnimateCSS class that will be added to selector
-		jqueryEffects: false,           // jQuery animation on/off
-		jqueryAnim: "slideDown",        // jQuery animation type: fadeIn, show or slideDown
-		selector: "a",                  // Selector to which activeClass will be added, either "a" or "li"
-		mobile: false,                  // If false nav will not stick under 480px width of window
-		mobileWidth: 480,               // The viewport width (without scrollbar) under which stickyNavbar will not be applied (due usability on mobile devices)
-		zindex: 9999,                   // The zindex value to apply to the element: default 9999, other option is "auto"
-		stickyModeClass: "sticky",      // Class that will be applied to 'this' in sticky mode
-		unstickyModeClass: "unsticky"   // Class that will be applied to 'this' in non-sticky mode
-			});
-		});
-    </script> 
-    <nav id="nav">
-        <ul class="nav navbar-nav">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#product">Our Product</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</section>
-    <div class="background">
-    <br /><br /><br />
-        <div id="home" class="scrollto">
-    <br /><br />
-        <h1>HOME</h1>
-            <form id="form1" runat="server">
-            <div id="formdesign">
-                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">        
+    <!--De container is als het ware het frame waar alle inhoud van de site in zit -->
+    <div id="container">
+        <!-- Header van de website -->
+        <div id="headerlayer">
+            <h1>ICT4Events</h1>
+        </div>
+        <!-- De navigatie-balk -->
+            <section id="header" class = "header">
+                <div>
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">       
+                    </asp:ContentPlaceHolder>
+                </div>
+            </section>
+        <div><br /></div>
+        <!-- Hier worden de verschillende paginas in geladen (De content) -->
+        <form id="form1" runat="server">
+            <div>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">       
                 </asp:ContentPlaceHolder>
             </div>
-            </form>
+        </form>
+        <div><br /></div>
+        <!-- De footer van de website -->
+        <div id="footer">
+            <img src ="Images/Cheering_crowd.jpg" width="1000px" height="180px"/>
         </div>
-    <br /> 
-         <div id="about" class="scrollto">
-    <br /><br />
-        <h1>ABOUT</h1>
-    <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
-    <br /><br />            
-    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.
-    </p>-->  
+        <div id="footerline">
+            © Inter ICT4Events Systems B.V. 2015-2015 | Privacybeleid | Cookiebeleid | Gebruikersvoorwaarden |
         </div>
-    <br />  
-        <div id="product" class="scrollto">
-    <br /><br />
-        <h1>OUR PRODUCT</h1>
-    <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
-    <br /><br />            
-    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.
-    </p>-->
-        </div>
-    <br />  
-        <div id="contact" class="scrollto">
-    <br /><br />
-        <h1>CONTACT</h1>
-    <!--<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
-    <br /><br />            
-    Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.
-    </p>-->
-        </div>
-    <br />    
     </div>
-    <!--Scripts die de skickynavbar laten werken-->
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-	<script src="http://cdn.jsdelivr.net/stickynavbar.js/1.1.2/jquery.stickyNavbar.min.js"></script>
 </body>
 </html>
