--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Masterpage.Master
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Masterpage.Master
@@ -37,7 +37,7 @@
             <img src ="Images/Cheering_crowd.jpg" width="1000px" height="180px"/>
         </div>
         <div id="footerline">
-            © Inter ICT4Events Systems B.V. 2015-2015 | Privacybeleid | Cookiebeleid | Gebruikersvoorwaarden |
+            © Inter ICT4Events
         </div>
     </div>
 </body>
