--- a/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Masterpage.Master
+++ b/_Applicaties/IventEindwerkstuk/IventWeb/IventWeb/Masterpage.Master
@@ -7,7 +7,33 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css" rel="stylesheet" type="text/css"/>
+	<script type="text/javascript" src="jquery-1.11.2.js"></script>
     <link rel="stylesheet" type="text/css" href="CSS/style.css" media="screen"/>
+    <!-- Script om de stickynavbar te maken 
+        Dit is eruit gelaten omdat dit alleen werkt op one-page websites-->
+    <!--<script>
+		$(function () {
+		$('#nav').stickyNavbar({
+		activeClass: "active",          // Class to be added to highlight nav elements
+		sectionSelector: "scrollto",    // Class of the section that is interconnected with nav links
+		animDuration: 250,              // Duration of jQuery animation
+		startAt: 0,                     // Stick the menu at XXXpx from the top of the this() (nav container)
+		easing: "linear",               // Easing type if jqueryEffects = true, use jQuery Easing plugin to extend easing types - gsgd.co.uk/sandbox/jquery/easing
+		animateCSS: true,               // AnimateCSS effect on/off
+		animateCSSRepeat: false,        // Repeat animation everytime user scrolls
+		cssAnimation: "fadeInDown",     // AnimateCSS class that will be added to selector
+		jqueryEffects: false,           // jQuery animation on/off
+		jqueryAnim: "slideDown",        // jQuery animation type: fadeIn, show or slideDown
+		lector: "li",                    // Selector to which activeClass will be added, either "a" or "li"
+		mobile: false,                  // If false nav will not stick under 480px width of window
+		mobileWidth: 480,               // The viewport width (without scrollbar) under which stickyNavbar will not be applied (due usability on mobile devices)
+		zindex: 9999,                   // The zindex value to apply to the element: default 9999, other option is "auto"
+		stickyModeClass: "sticky",      // Class that will be applied to 'this' in sticky mode
+		unstickyModeClass: "unsticky"   // Class that will be applied to 'this' in non-sticky mode
+			});
+		});
+    </script>-->
 </head>
 <body>
     <!--De container is als het ware het frame waar alle inhoud van de site in zit -->
@@ -40,5 +66,8 @@
             © Inter ICT4Events
         </div>
     </div>
+    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+	<script src="http://cdn.jsdelivr.net/stickynavbar.js/1.1.2/jquery.stickyNavbar.min.js"></script>
 </body>
 </html>
